# xprompt

./: .gitignore  README.md  pyproject.toml
tests/: test_discovery.py
xprompt/: __init__.py  prompt.py  registry.py
xprompt/addons/: __init__.py  discovery.py
xprompt/docs/: alternatives.md  cheatsheet.md  concept.md  developer-experience.md  structured-nodes.md
